# Asteroids

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  install.sh
SDL2-2.0.10/include/: SDL_rect.h
SDL2-2.0.10/src/dynapi/: SDL_dynapi_overrides.h  SDL_dynapi_procs.h
SDL2-2.0.10/src/render/: SDL_render.c
SDL2-2.0.10/src/video/: SDL_rect.c
inc/: Obstacle.h
include/: asteroid.h  bullet.h  game.h  menu.h  modules.h  obstacle.h  parameters.h  ship.h  spaceShips.h  textDisplayer.h  tracker.h  turret.h  utils.h
src/: Obstacle.cpp  asteroid.cpp  asteroids.cpp  bullet.cpp  game.cpp  main.cpp  menu.cpp  modules.cpp  obstacle.cpp  parameters.cpp  ship.cpp  textDisplayer.cpp  tracker.cpp  turret.cpp  utils.cpp
